--- a/style.css
+++ b/style.css
@@ -40,6 +40,11 @@ body {
   display: flex;
 }
 
+#rouletteBox.big {
+  scale: 2;
+  transform: translateX(50%);
+}
+
 #circle-wrap {
   flex: 1;
   display: flex;
